# StlViewer

./: .gitignore  CMakeLists.txt  Mar_Polish.stl  Readme.md  main.cpp
